# rflink-modem

./: .gitignore  LICENSE  README.md  dir_tree.txt  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat
examples/: 00_bits_to_wav.py  01_wav_loopback_bits.py
src/rflink-modem/utils/: bitops.py
src/rflink_modem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rflink_modem/containers/: wav.py
src/rflink_modem/modem/: blocking.py  pipeline.py
src/rflink_modem/protocol/: crc.py  framing.py  whitening.py
src/rflink_modem/verify/: bit_stream_parser.py  stream_parser.py  sync_search.py
src/rflink_modem_v2/: dir_tree.txt
src/rflink_modem_v2/pipeline/: __init__.py  config.py  pipeline.py
tests/: conftest.py
tests/output/: cwg_bits.txt
tests/output/reference/: cwg_bits_demod.txt
tests/unit/: test_bitops.py  test_end_to_end_full_stack.py  test_fec_conv.py  test_interleave.py  test_pipeline_block_mode.py  test_pipeline_end_to_end.py  test_whitening.py
tests/unit/bit_fec/: test_bit_fec_stage.py  test_conv_k7_r12.py
tests/unit/blocking/: test_blocking_fixed.py  test_blocking_stage.py
tests/unit/byte_fec/: test_byte_fec_stage.py  test_rs255.py
tests/unit/characterization/: test_msfk_listen.py  test_phy_limits.py  test_phy_limits_msfk.py
tests/unit/containers/: test_wav_container.py
tests/unit/crypto/: test_crypto_chacha20poly1305.py  test_crypto_stage.py
tests/unit/fec/: test_fec_conv_strong.py  test_fec_rs.py  test_fec_rs_strong.py
tests/unit/framing/: test_framing_length.py  test_freaming_stage.py
tests/unit/phy/: test_afsk.py  (+2 more)
(+68 files in other folders)
